[tool.poetry]
name = "vectordb"
version = "0.1.0"
description = ""
authors = ["Jason Zhang <jasonjzhang17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^2.1.3"
scipy = "^1.14.1"
annoy = "^1.17.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
